# tvnamer

./: .gitignore  .mailmap  .travis.yml  AUTHORS.rst  CMakeLists.txt  LICENSE.rst  README.md  README.rst  package.json  requirements.txt  setup.py  tvnamer.sublime-project
TVNamer/: TVNamer.pro  mainwindow.ui
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  make.bat  usage.rst
lib/: tvnamer.js
src/: CMakeLists.txt  findshowdialogue.cpp  findshowdialogue.h  findshowdialogue.ui  main.cpp  mainwindow.cpp  mainwindow.h  seasonwidget.cpp  seasonwidget.h  seasonwidget.ui  thetvdb.cpp  thetvdb.h
tvnamer/: __init__.py  renamer.py
tvnamer/cli/: __init__.py
tvnamer/gui/: __init__.py
